--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -138,6 +138,17 @@
     margin-bottom: 20px
   .fotter__item:last-child
     margin: 20px 0 0 0
+  .header__burger.active::before
+    transform: rotate(45deg)
+    top: 9px
+  
+  .header__burger.active::after
+    transform: rotate(-45deg)
+    bottom: 9px
+  
+  .header__burger.active span
+    transform: scale(0)
+  
 
 
 // ≥576px
